# debugger-controller

./: README.md  pyproject.toml
dbgctrl/: __init__.py  common.py  gdb.py  lldb.py  logging.py
dbgctrl/app/: regdump.py
examples/: Makefile  main.c  test.elf  test.elf.dis  test.py
